# internal/requests/orders.go
@@ -6,19 +6,28 @@ import (
 )
 
 type OrderRequest struct {
-	ID              uuid.UUID
 	UserID          uuid.UUID
 	TotalPrice      uint64
 	ClientPhone     string
-	ShippingAddress *models.ShippingAddress
+	ShippingAddress *AddressRequest
 }
 
-func (order *OrderRequest) GetOrder() *models.Order {
-	return &models.Order{
-		ID:                order.ID,
+func (order *OrderRequest) ToOrder() (*models.Order, *models.ShippingAddress) {
+	newAddress := &models.ShippingAddress{
+		ID:      uuid.New(),
+		ZIPCode: order.ShippingAddress.ZIPCode,
+		Country: order.ShippingAddress.Country,
+		County:  order.ShippingAddress.County,
+		State:   order.ShippingAddress.State,
+		City:    order.ShippingAddress.City,
+		Street:  order.ShippingAddress.Street,
+	}
+	newOrder := &models.Order{
+		ID:                uuid.New(),
 		UserID:            order.UserID,
 		TotalPrice:        order.TotalPrice,
 		ClientPhone:       order.ClientPhone,
-		ShippingAddressID: order.ShippingAddress.ID,
+		ShippingAddressID: newAddress.ID,
 	}
+	return newOrder, newAddress
 }
